k8s/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  annotations:
    linkerd.io/inject: enabled
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      name: api
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: api
        swiss.dev/logging: json
    spec:
      containers:
        - name: api
          image: ghcr.io/cfi2017/sgbf:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
              name: http
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
      restartPolicy: Always
