k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sgbf
spec:
  rules:
  - host: sgbf.swiss.dev
    http:
      paths:
      - backend:
          service:
            name: api
            port:
              number: 80
        path: /api
        pathType: Prefix
      - backend:
          service:
            name: frontend
            port:
              number: 80
        path: /
        pathType: Prefix
